[package]
name = "web-sys-query"
version = "0.0.1-alpha.3"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "jQuery-like API for web-sys"
repository = "https://github.com/reyk/web-sys-query"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "jquery", "web-sys"]

[badges]
travis-ci = { repository = "reyk/web-sys-query", branch = "main" }

[dependencies]
cssparser = "0.27.2"
derive_more = "0.99.11"
displaydoc = "0.1.7"
js-sys = "0.3.46"
selectors = "0.22.0"
thiserror = "1.0.22"
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "Document",
  "DomTokenList",
  "Element",
  "HtmlElement",
  "HtmlCollection",
  "Window",
]

[dependencies.web-sys-query-derive]
path = "derive"
version = "0.0.1-alpha.0"

[dev-dependencies]
log = "0.4.11"
console_log = "0.2.0"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
version = "0.3.46"
features = [
  "Document",
  "DomParser",
  "HtmlButtonElement",
  "HtmlDataElement",
  "HtmlInputElement",
  "HtmlLiElement",
  "HtmlMeterElement",
  "HtmlOptionElement",
  "HtmlOutputElement",
  "HtmlParamElement",
  "HtmlProgressElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "SupportedType",
]

[workspace]
members = [
  ".",
  "derive"
]
