[package]
name = "web-sys-query-derive"
version = "0.0.1-alpha.5"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "jQuery-like API for web-sys"
repository = "https://github.com/reyk/web-sys-query"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "jquery", "web-sys"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.7"
syn = { version = "1.0.54", features = [ "full" ] }
convert_case = "0.4.0"
